name:                kademlia
version:             1.1.0.1
homepage:            https://github.com/bkase/kademlia
bug-reports:         https://github.com/bkase/kademlia/issues
synopsis:            An implementation of the Kademlia DHT Protocol
description:
    .
    A haskell implementation of the Kademlia distributed hashtable, an efficient
    way to store and lookup values distributed over a P2P network.
    .
    The implementation is based on the paper
    /Kademlia: A Peer-to-peer Information System Based on the XOR Metric/:
    <http://pdos.csail.mit.edu/~petar/papers/maymounkov-kademlia-lncs.pdf>
    by Petar Maymounkov and David Mazières.
    .
    This library aims to be very simple and pleasant to use, with the downside of
    deciding some of the implementation details, like timeout intervals and
    k-bucket size, for the user.

license:             BSD3
license-file:        LICENSE
author:              fro_ozen <fro_ozen@gmx.de>
maintainer:          fro_ozen <fro_ozen@gmx.de>, 2016 Serokell <hi@serokell.io>, 2018 Brandon Kase
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:       git
    location:   https://github.com/bkase/kademlia.git

library
  exposed-modules:     Network.Kademlia
                       Network.Kademlia.Config
                       Network.Kademlia.HashNodeId,
                       Network.Kademlia.Implementation
                       Network.Kademlia.Instance
                       Network.Kademlia.Process
                       Network.Kademlia.Networking
                       Network.Kademlia.Protocol
                       Network.Kademlia.Protocol.Parsing
                       Network.Kademlia.ReplyQueue
                       Network.Kademlia.Tree
                       Network.Kademlia.Types
                       Network.Kademlia.Utils

  build-depends:       base                >= 4.7 && < 5
                     , bytestring          >= 0.10.2 && < 0.11
                     , containers          >= 0.5.5.1
                     , extra               >= 1.4
                     , memory
                     , MonadRandom
                     , mtl                 >= 2.1.3.1
                     , network             >= 2.6 && < 2.9
                     , random
                     , random-shuffle
                     , stm                 >= 2.4.3
                     , time                >= 1.6
                     , transformers        >= 0.3
                     , cryptonite
                     , contravariant

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -O2

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        OverloadedStrings
                        RecordWildCards
